--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Backend Разработчик | Резюме</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header class="header">
+        <div class="container">
+            <h1>Иван Иванов</h1>
+            <p class="subtitle">Backend Разработчик</p>
+        </div>
+    </header>
 
+    <section class="tabs">
+        <div class="container">
+            <ul class="tab-links">
+                <li class="tab-link active" data-tab="about">Обо мне</li>
+                <li class="tab-link" data-tab="projects">Мои проекты</li>
+            </ul>
+
+            <div id="about" class="tab-content active">
+                <h2>Опыт работы</h2>
+                <p>Я опытный backend-разработчик с более чем 5 годами опыта в создании масштабируемых и надежных серверных решений. Специализируюсь на разработке API, базах данных и интеграции систем.</p>
+                <div class="job">
+                    <h3>Senior Backend Developer - TechCorp</h3>
+                    <p class="job-duration">Январь 2021 — Настоящее время</p>
+                    <ul>
+                        <li>Разработка микросервисной архитектуры на Node.js и Go.</li>
+                        <li>Оптимизация производительности баз данных PostgreSQL.</li>
+                        <li>Внедрение CI/CD процессов с использованием Jenkins и GitLab.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div id="projects" class="tab-content">
+                <!-- Контент будет загружен динамически -->
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2023 Иван Иванов. Все права защищены.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
